Add CORS handling

--- a/nginx/ssl.conf
+++ b/nginx/ssl.conf
@@ -35,6 +35,12 @@ server {
     add_header X-Frame-Options DENY always;
     add_header X-Content-Type-Options nosniff always;
     add_header X-XSS-Protection "1; mode=block" always;
+    
+    # CORS headers - allow all origins
+    add_header Access-Control-Allow-Origin "*" always;
+    add_header Access-Control-Allow-Methods "GET, POST, OPTIONS" always;
+    add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,X-API-Key" always;
+    add_header Access-Control-Expose-Headers "Content-Length,Content-Range" always;
 
     # Client settings
     client_max_body_size 1M;
@@ -43,8 +49,18 @@ server {
     # Rate limiting
     limit_req zone=api burst=20 nodelay;
 
-    # Proxy to Node.js app
+    # Handle OPTIONS preflight requests
     location / {
+        if ($request_method = 'OPTIONS') {
+            add_header Access-Control-Allow-Origin "*" always;
+            add_header Access-Control-Allow-Methods "GET, POST, OPTIONS" always;
+            add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,X-API-Key" always;
+            add_header Access-Control-Max-Age 1728000;
+            add_header Content-Type 'text/plain; charset=utf-8';
+            add_header Content-Length 0;
+            return 204;
+        }
+        
         proxy_pass http://nano-rpc-proxy-app:3000;
         
         # Proxy headers
