--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,8 +21,8 @@ http {
     keepalive_timeout 65;
     types_hash_max_size 2048;
 
-    # Rate limiting
-    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
+    # Rate limiting disabled - handled by Node.js app
+    # limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
 
     # Include server configurations
     include /etc/nginx/conf.d/*.conf;
