--- a/nginx/ssl.conf
+++ b/nginx/ssl.conf
@@ -46,8 +46,8 @@ server {
     client_max_body_size 1M;
     client_body_buffer_size 1M;
 
-    # Rate limiting
-    limit_req zone=api burst=20 nodelay;
+    # Rate limiting disabled - handled by Node.js app
+    # limit_req zone=api burst=20 nodelay;
 
     # Handle OPTIONS preflight requests
     location / {
