Use host network for proxy and target via host alias

--- a/nginx/ssl.conf
+++ b/nginx/ssl.conf
@@ -61,7 +61,7 @@ server {
             return 204;
         }
         
-        proxy_pass http://nano-rpc-proxy-app:3000;
+        proxy_pass http://host.docker.internal:3000;
         
         # Proxy headers
         proxy_set_header Host $host;
@@ -83,7 +83,7 @@ server {
 
     # Health check endpoint (bypass rate limiting)
     location /health {
-        proxy_pass http://nano-rpc-proxy-app:3000/health;
+        proxy_pass http://host.docker.internal:3000/health;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
