--- a/docker-compose.ssl.yml
+++ b/docker-compose.ssl.yml
@@ -7,12 +7,9 @@ services:
     restart: unless-stopped
     environment:
       - PORT=3000
-      - NANO_RPC_URL=${NANO_RPC_URL:-http://172.17.0.1:7076}
+      - NANO_RPC_URL=${NANO_RPC_URL:-http://127.0.0.1:7076}
       - API_KEY=${API_KEY:-5e3ff8205b57fa3495bde592f07a0a06b395f97997555a8ce104347f651d63eb}
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
-    networks:
-      - nano-network
+    network_mode: host
 
   nginx-ssl:
     image: nginx:alpine
@@ -26,6 +23,8 @@ services:
       - ./nginx/ssl.conf:/etc/nginx/conf.d/default.conf:ro
       - /etc/letsencrypt:/etc/letsencrypt:ro
       - /var/www/certbot:/var/www/certbot:ro
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     depends_on:
       - nano-rpc-proxy
     networks:
