--- a/docker-compose.ssl.yml
+++ b/docker-compose.ssl.yml
@@ -15,16 +15,12 @@ services:
     image: nginx:alpine
     container_name: nano-rpc-nginx
     restart: unless-stopped
-    ports:
-      - "80:80"
-      - "443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/ssl.conf:/etc/nginx/conf.d/default.conf:ro
       - /etc/letsencrypt:/etc/letsencrypt:ro
       - /var/www/certbot:/var/www/certbot:ro
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+    network_mode: host
     depends_on:
       - nano-rpc-proxy
     networks:
