Adapt nano rpc proxy to also proxy the zano node

--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,12 @@ NANO_RPC_URL=http://127.0.0.1:7076
 # Example: openssl rand -hex 32
 API_KEY=your-secure-api-key-here
 
+# Zano RPC (internal) settings
+# Defaults: internal network only, API key required, and dangerous methods blocked
+ZANO_RPC_URL=http://127.0.0.1:11211/json_rpc
+ZANO_API_KEY=your-zano-api-key-here
+ZANO_INTERNAL_ONLY=true
+ZANO_ALLOWED_METHODS=make_integrated_address,get_balance,get_payments
+
 # Optional: Node.js environment
 NODE_ENV=production
