--- a/docker-compose.ssl.yml
+++ b/docker-compose.ssl.yml
@@ -8,7 +8,9 @@ services:
     environment:
       - PORT=3000
       - NANO_RPC_URL=${NANO_RPC_URL:-http://127.0.0.1:7076}
-      - API_KEY=${API_KEY:-5e3ff8205b57fa3495bde592f07a0a06b395f97997555a8ce104347f651d63eb}
+      - API_KEY=${API_KEY}
+      - ZANO_RPC_URL=${ZANO_RPC_URL:-http://127.0.0.1:11211/json_rpc}
+      - ZANO_API_KEY=${ZANO_API_KEY}
     network_mode: host
 
   nginx-ssl:
