Enforce Zano API key, allowlist methods, add tests and deploy updates

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,32 @@ ZANO_RPC_URL=http://127.0.0.1:11211/json_rpc
 ZANO_API_KEY=your-zano-api-key-here
 ZANO_INTERNAL_ONLY=true
 ZANO_ALLOWED_METHODS=make_integrated_address,get_balance,get_payments
+ZANO_RPC_USER=
+ZANO_RPC_PASSWORD=
+ZANO_STATUS_URL=
+ZANO_DECIMALS=12
+FUSD_DECIMALS=12
+
+# Redis/Upstash for deposit watcher and status storage
+KV_REST_API_URL=
+KV_REST_API_TOKEN=
+KV_REST_API_READ_ONLY_TOKEN=
+KV_URL=
+REDIS_URL=
+
+# Deposit watcher configuration
+WATCHER_TICKERS=zano,fusd
+WATCHER_WEBHOOK_URL=https://nano-gpt.com/api/transaction/callback/zano
+WATCHER_SHARED_SECRET=change-me
+WATCHER_INTERVAL_MS=15000
+WATCHER_SCAN_COUNT=100
+WATCHER_MIN_CONFIRMATIONS_ZANO=6
+WATCHER_MIN_CONFIRMATIONS_FUSD=2
+WATCHER_JOB_TTL_SECONDS=86400
+WATCHER_STATUS_TTL_SECONDS=604800
+WATCHER_SEEN_TTL_SECONDS=14400
+WATCHER_WEBHOOK_TIMEOUT_MS=12000
+WATCHER_ERROR_BACKOFF_MS=30000
 
 # Optional: Node.js environment
 NODE_ENV=production
