Add zano wallet rpc

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,9 @@ API_KEY=your-secure-api-key-here
 ZANO_RPC_URL=http://127.0.0.1:11211/json_rpc
 ZANO_API_KEY=your-zano-api-key-here
 ZANO_ALLOWED_METHODS=make_integrated_address,get_balance,get_payments
+ZANO_WALLET_FILE=/home/ubuntu/wallet/yourwallet.wallet
+ZANO_WALLET_PASSWORD=change-me
+ZANO_WALLET_RPC_PORT=11212
 ZANO_DECIMALS=12
 FUSD_DECIMALS=12
 
