Disable watcher, opting for a simpler polling solution

--- a/.env.example
+++ b/.env.example
@@ -22,17 +22,17 @@ ZANO_WALLET_RPC_PORT=11212
 ZANO_DECIMALS=12
 FUSD_DECIMALS=12
 
-# Redis/Upstash for deposit watcher and status storage
+# Redis/Upstash for deposit watcher and status storage (optional)
 KV_REST_API_URL=
 KV_REST_API_TOKEN=
 KV_REST_API_READ_ONLY_TOKEN=
 KV_URL=
 REDIS_URL=
 
-# Deposit watcher configuration
-WATCHER_TICKERS=zano,fusd
-WATCHER_WEBHOOK_URL=https://nano-gpt.com/api/transaction/callback/zano
-WATCHER_SHARED_SECRET=change-me
+# Deposit watcher configuration (optional; leave empty to disable)
+WATCHER_TICKERS=
+WATCHER_WEBHOOK_URL=
+WATCHER_SHARED_SECRET=
 WATCHER_INTERVAL_MS=15000
 WATCHER_SCAN_COUNT=100
 WATCHER_MIN_CONFIRMATIONS_ZANO=6
