--- a/.env.example
+++ b/.env.example
@@ -22,17 +22,17 @@ ZANO_WALLET_RPC_PORT=11212
 ZANO_DECIMALS=12
 FUSD_DECIMALS=12
 
-# Redis/Upstash for deposit watcher and status storage (optional)
+# Redis/Upstash for deposit watcher and status storage (required for watcher)
 KV_REST_API_URL=
 KV_REST_API_TOKEN=
 KV_REST_API_READ_ONLY_TOKEN=
 KV_URL=
 REDIS_URL=
 
-# Deposit watcher configuration (optional; leave empty to disable)
-WATCHER_TICKERS=
-WATCHER_WEBHOOK_URL=
-WATCHER_SHARED_SECRET=
+# Deposit watcher configuration
+WATCHER_TICKERS=zano,fusd
+WATCHER_WEBHOOK_URL=https://nano-gpt.com/api/transaction/callback/zano
+WATCHER_SHARED_SECRET=change-me
 WATCHER_INTERVAL_MS=15000
 WATCHER_SCAN_COUNT=100
 WATCHER_MIN_CONFIRMATIONS_ZANO=6
@@ -42,6 +42,8 @@ WATCHER_STATUS_TTL_SECONDS=604800
 WATCHER_SEEN_TTL_SECONDS=14400
 WATCHER_WEBHOOK_TIMEOUT_MS=12000
 WATCHER_ERROR_BACKOFF_MS=30000
+WATCHER_CONSOLIDATE_ZANO=false
+WATCHER_CONSOLIDATE_ADDRESS_ZANO=
 
 # Optional: Node.js environment
 NODE_ENV=production
