Rename Redis keys to avoid conflict with the Blockchain monitor

--- a/.env.example
+++ b/.env.example
@@ -44,6 +44,7 @@ WATCHER_WEBHOOK_TIMEOUT_MS=12000
 WATCHER_ERROR_BACKOFF_MS=30000
 WATCHER_CONSOLIDATE_ZANO=false
 WATCHER_CONSOLIDATE_ADDRESS_ZANO=
+WATCHER_KEY_PREFIX=zano
 
 # Optional: Node.js environment
 NODE_ENV=production
