--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node server.js",
-    "test:zano": "node test-zano-endpoint.js"
+    "test:zano": "node test-zano-endpoint.js",
+    "create:test:deposit": "node scripts/create-test-deposit.js"
   },
   "dependencies": {
     "express": "^4.18.2",
