--- a/docker-compose.ssl.yml
+++ b/docker-compose.ssl.yml
@@ -20,8 +20,8 @@ services:
     environment:
       - HOME=/home/ubuntu
     volumes:
-      - ./zano-data:/home/ubuntu/.Zano
-      - ./private:/home/ubuntu/private
+      - ${ZANO_DATA_DIR:-./zano-data}:/home/ubuntu/.Zano
+      - ${ZANO_PRIVATE_DIR:-./private}:/home/ubuntu/private
     network_mode: host
 
   zano-wallet-rpc:
@@ -40,7 +40,7 @@ services:
         "--daemon-address", "127.0.0.1:11121"
       ]
     volumes:
-      - ./wallet-data:/home/ubuntu/wallet
+      - ${ZANO_WALLET_DIR:-./wallet-data}:/home/ubuntu/wallet
     depends_on:
       - zano
     network_mode: host
