--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "create:test:deposit": "node scripts/create-test-deposit.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@upstash/redis": "^1.35.7",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
-    "morgan": "^1.10.0",
-    "express-rate-limit": "^7.1.5"
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "morgan": "^1.10.0"
   }
 }
