Relax status polling rate limits and add cache

--- a/.env.example
+++ b/.env.example
@@ -46,5 +46,14 @@ WATCHER_CONSOLIDATE_ZANO=false
 WATCHER_CONSOLIDATE_ADDRESS_ZANO=
 WATCHER_KEY_PREFIX=zano
 
+# Public rate limiting (requests without Nano API key)
+PUBLIC_RATE_LIMIT_WINDOW_MS=900000
+PUBLIC_RATE_LIMIT_MAX=100
+
+# Transaction status polling limits + short-lived cache
+STATUS_RATE_LIMIT_WINDOW_MS=300000
+STATUS_RATE_LIMIT_MAX=600
+STATUS_CACHE_TTL_MS=5000
+
 # Optional: Node.js environment
 NODE_ENV=production
