Update docs for FUSD decimals and webhooks

--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,8 @@ ZANO_WALLET_FILE=/home/ubuntu/wallet/yourwallet.wallet
 ZANO_WALLET_PASSWORD=change-me
 ZANO_WALLET_RPC_PORT=11212
 ZANO_DECIMALS=12
-FUSD_DECIMALS=12
+FUSD_DECIMALS=4
+FUSD_ASSET_ID=
 
 # Redis/Upstash for deposit watcher and status storage (required for watcher)
 KV_REST_API_URL=
@@ -31,7 +32,10 @@ REDIS_URL=
 
 # Deposit watcher configuration
 WATCHER_TICKERS=zano,fusd
-WATCHER_WEBHOOK_URL=https://nano-gpt.com/api/transaction/callback/zano
+WATCHER_WEBHOOK_URL_ZANO=https://nano-gpt.com/api/transaction/callback/zano
+WATCHER_WEBHOOK_URL_FUSD=https://nano-gpt.com/api/transaction/callback/fusd
+# Legacy single webhook URL fallback:
+WATCHER_WEBHOOK_URL=
 WATCHER_SHARED_SECRET=change-me
 WATCHER_INTERVAL_MS=15000
 WATCHER_SCAN_COUNT=100
@@ -42,9 +46,11 @@ WATCHER_STATUS_TTL_SECONDS=604800
 WATCHER_SEEN_TTL_SECONDS=14400
 WATCHER_WEBHOOK_TIMEOUT_MS=12000
 WATCHER_ERROR_BACKOFF_MS=30000
-WATCHER_CONSOLIDATE_ZANO=false
-WATCHER_CONSOLIDATE_ADDRESS_ZANO=
 WATCHER_KEY_PREFIX=zano
+
+# Optional: persist deposit/webhook audit logs to disk (recommended when running in Docker)
+WATCHER_DEPOSIT_LEDGER_MODE=disk
+WATCHER_DEPOSIT_LEDGER_DIR=/watcher-ledger
 
 # Public rate limiting (requests without Nano API key)
 PUBLIC_RATE_LIMIT_WINDOW_MS=900000
